--- a/lims/Dockerfile
+++ b/lims/Dockerfile
@@ -1,6 +1,4 @@
 #Create a LIMS image based on tomcat8
 FROM tomcat:latest
 COPY  iframework /usr/local/iframework
-COPY  server.xml /usr/local/tomcat/conf/server.xml
-
-
+VOLUME /usr/local/tomcat/logs /usr/local/tomcat/conf/
