fix out-dated  attributes  in server.xml.

--- a/lims/Dockerfile
+++ b/lims/Dockerfile
@@ -1,4 +1,7 @@
 #Create a LIMS image based on tomcat8
 FROM tomcat:latest
-COPY  iframework /usr/local/iframework
+LABEL name="lims-all"
+COPY  product /sunway/product/ 
+COPY  server.xml /usr/local/tomcat/conf/
 VOLUME /usr/local/tomcat/logs /usr/local/tomcat/conf/
+
